@@ -87,8 +87,9 @@ MAPENTITY_CONFIG['CONVERSION_SERVER'] = '%s://%s:%s' % (envini.get('protocol', s
 MAPENTITY_CONFIG['CAPTURE_SERVER'] = '%s://%s:%s' % (envini.get('protocol', section='screamshotter', default='http'),
                                                      envini.get('host', section='screamshotter', default='127.0.0.1'),
                                                      envini.get('port', section='screamshotter', default='8001'))
-TEMPLATE_DIRS += (os.path.join(DEPLOY_ROOT, 'lib', 'parts', 'omelette',
-                               'mapentity', 'templates'),)
+TEMPLATE_DIRS = (os.path.join(DEPLOY_ROOT, 'lib', 'parts', 'omelette',
+                               'mapentity', 'templates'),
+                  os.path.join(MEDIA_ROOT, 'templates')) + TEMPLATE_DIRS
 
 
 #
